Changes for mobile version

--- a/src/components/DropZone/DropZone.css
+++ b/src/components/DropZone/DropZone.css
@@ -2,6 +2,11 @@
   display: none;
 }
 
+.split {
+  height: 100%;
+  width: 100%;
+}
+
 .split-left {
   height: 100%;
   width: 63%;
@@ -28,6 +33,10 @@
   background-color: #1d1c1c;
   color: grey;
 }
+.right {
+  right: 0;
+  background-color: whitesmoke;
+}
 
 .headline {
   margin-left: 70px;
@@ -43,10 +52,6 @@
   grid-gap: 30px;
 }
 /* Control the right side */
-.right {
-  right: 0;
-  background-color: whitesmoke;
-}
 
 .align-left {
   float: left;
@@ -54,6 +59,11 @@
 
 .align-right {
   float: right;
+}
+
+.help-text {
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .file-img {
@@ -104,4 +114,28 @@
 }
 .error {
   color: red;
+}
+
+@media screen and (max-width: 567px) {
+  .split-left {
+    width: 55%;
+  }
+  .split-right {
+    width: 45%;
+  }
+  .image-box {
+    margin-left: 15%;
+  }
+  .dropzone {
+    width: 80%;
+    height: 25vh;
+  }
+  .headline {
+    margin-left: 10%;
+    margin-right: 0;
+  }
+  .file-img {
+    width: 90%;
+    height: 20vh;
+  }
 }
