--- a/src/components/DropZone/DropZone.css
+++ b/src/components/DropZone/DropZone.css
@@ -10,7 +10,7 @@
 .split-left {
   height: 100%;
   width: 63%;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   top: 0;
   overflow-x: hidden;
